--- a/docs/styles.css
+++ b/docs/styles.css
@@ -9,7 +9,7 @@ body {
     background-color: #111;
     color: #fff;
     font-weight:lighter;
-    max-width:900px; 
+    max-width:1250px; 
     margin: 0 auto
 }
 
@@ -17,16 +17,28 @@ h1 {
 	text-align: center;
 }
 
+#robo {
+    content:url(./ms_robot.svg);
+    height:1em;
+    vertical-align:middle;
+    margin-right:0.5em
+}
+
+#robo:hover {
+    content:url(./ms_robot_cheery.png)
+}
+
 a {
-    color: #f3c;
-    text-decoration: none;
+    color: #58d3d7;
+    text-decoration: underline;
     background-color: transparent;
+    font-weight: normal;
 }
 
 a:hover, a:focus {
     text-decoration: none; 
-    background-color: #f3c;
-    color: #fff; 
+    background-color: #58d3d7;
+    color: #111; 
 }
 
 #members {
@@ -64,13 +76,24 @@ th {
     background-color: #444;
     text-align: center;
 	font-size: 1.1em;
-    text-transform: lowercase;
 }
 
 ol {
-    margin:0;
+    margin:0 1.75em;
     padding:0;
-    list-style-position: inside;
+}
+
+li {
+    margin-bottom: 0.5em;
+}
+
+pre {
+    font-family: 'jetbrains mono', monospace;
+}
+
+.comment {
+    color:#929292;
+    font-style:italic
 }
 
 .container {
