--- a/data/templates/template.html
+++ b/data/templates/template.html
@@ -5,14 +5,9 @@
     <meta http-equiv="refresh" content="0; url={{ url }}">
     <title>Redirecting...</title>
 	
-	<style>
-		body {
-		  background-color: #000;
-		  color: #fff;
-		}
-	</style>
+	<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <p>A fairy is teleporting you to <a href="{{ url }}">{{ url }}</a>...!</p>
+    <p>redirecting you to <a href="{{ url }}">{{ url }}</a>! beep!</p>
 </body>
 </html>
