--- a/data/templates/template.html
+++ b/data/templates/template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="refresh" content="0; url={{ url }}">
     <title>Redirecting...</title>
 	
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
     <p>redirecting you to <a href="{{ url }}">{{ url }}</a>! beep!</p>
