--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -20,6 +20,7 @@
     <br>a webring for robot-aligned beings!
   </center>
   <h2>members</h2>
+  <p>there are <b>{{ number_of_sites }}</b> sites in roboring.</p>
   <div id="members">
     {{ table_of_sites | safe}}
   </div>
