--- a/data/templates/template.html
+++ b/data/templates/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="refresh" content="0; url={{ url }}">
-    <title>Redirecting...</title>
+    <title>redirecting...</title>
 	
 	<link rel="stylesheet" href="../../styles.css">
 </head>
