fix html example

--- a/data/templates/index.html
+++ b/data/templates/index.html
@@ -30,9 +30,9 @@
   <ol>
     <li>choose a slug (unique code) for your site</li>
     <li>add the webring HTML somewhere on your site:<br>
-      &lt;a href="https://stellophiliac.github.io/roboring/<b>YOUR_SLUG</b>/previous"&gt; &lt;- &lt;a&gt;<br>
-      &lt;a href="https://stellophiliac.github.io/roboring"&gt;roboring&lt;a&gt;<br>
-      &lt;a href="https://stellophiliac.github.io/roboring/<b>YOUR_SLUG</b>/next"&gt; -&gt; &lt;a&gt;
+      &lt;a href="https://stellophiliac.github.io/roboring/<b>YOUR_SLUG</b>/previous"&gt; &lt;- &lt;/a&gt;<br>
+      &lt;a href="https://stellophiliac.github.io/roboring"&gt;roboring&lt;/a&gt;<br>
+      &lt;a href="https://stellophiliac.github.io/roboring/<b>YOUR_SLUG</b>/next"&gt; -&gt; &lt;/a&gt;
       <br>
       feel free to customize the content as you'd like, as long as the links are intact. make sure to replace
       "YOUR_SLUG" with your actual slug!
